# mtg-berkeley-db

./: .gitignore  README.md
src/: .gitignore  CMakeLists.txt  Doxyfile  INSTALL.md  INSTALL_new.md  INSTALL_windows.md  Organizer.md  README.md  doxy.sh  todo.txt
src/apps/: bdb_inet_lookup.cpp  bdb_unix_lookup.cpp  imdb_app.cpp  mtg_app.cpp  ratings_top_num_votes.cpp  test_unix_client.cpp  test_unix_client_request.cpp  test_unix_server.cpp  test_unix_server_loop.cpp
src/bdb-lib/: CMakeLists.txt  bdb_common.hpp  bdb_cursor.hpp  bdb_dao.hpp  bdb_databases.cpp  bdb_databases.hpp  bdb_databases_config.cpp  bdb_databases_config.hpp  bdb_db.cpp  bdb_db.hpp  bdb_dbt.hpp  bdb_errors.cpp  bdb_errors.hpp  bdb_file_io.cpp  bdb_file_io.hpp  bdb_inet_socket_server.cpp  bdb_inet_socket_server.hpp  bdb_json_utils.cpp  bdb_json_utils.hpp  bdb_key_extractor.hpp  bdb_serializable.hpp  bdb_serialization.cpp  bdb_serialization.hpp  bdb_socket_common.hpp  bdb_tokens.cpp  bdb_tokens.hpp  bdb_triplets_dto.cpp  bdb_triplets_dto.hpp  bdb_tripthongs_dto.cpp  bdb_tripthongs_dto.hpp  bdb_unix_socket_client.cpp  bdb_unix_socket_client.hpp  bdb_unix_socket_server.cpp  bdb_unix_socket_server.hpp
src/cmake/: UseDoxygenDoc.cmake
src/data/tsv/: account.tsv  card.tsv  deck.tsv  deck_card.tsv
src/docker/: .gitignore  Dockerfile  bdb_databases.json  bdb_inet_lookup.sh  build.sh  build_api.sh  gcr_build.sh  instructions.txt  mtg_app.sh  prep.sh  publish.sh  pull.sh  push_app.sh  remove_images.sh  req_api.sh  run.sh  run_api.sh
src/docker/save/: Dockerfile.supervisor  chatgpt-2023-07-29_11-05.txt  gcr_push.sh  supervisord.conf  tag.sh  tag_app.sh
src/docs/: Doxyfile.in  doxygen_notes.txt
src/env/: DB_CONFIG
src/example-lib/: CMakeLists.txt  example-databases.json  example_keys.cpp  example_keys.hpp  inventory.cpp  inventory.hpp  inventory.txt  vendor.cpp  vendor.hpp  vendors.txt
src/history/: HISTORY.md  V1.0.md  V2.0_oatpp.md
src/imdb-lib/: CMakeLists.txt  imdb_bdb_keys.cpp  imdb_bdb_keys.hpp  imdb_dto.hpp  imdb_global.cpp  imdb_global.hpp  imdb_inet_app_init.cpp  imdb_inet_app_init.hpp  imdb_inet_request.cpp  imdb_inet_request.hpp  imdb_tokens.cpp  imdb_tokens.hpp  imdb_unix_app_init.cpp  imdb_unix_app_init.hpp  imdb_unix_request.cpp  imdb_unix_request.hpp  name_dao.cpp  name_dao.hpp  name_dto.cpp  name_dto.hpp  principals_dao.cpp  principals_dao.hpp  principals_dto.cpp  principals_dto.hpp  ratings_dao.cpp  ratings_dao.hpp  ratings_dto.cpp  ratings_dto.hpp  title_dao.cpp  title_dao.hpp  title_dto.cpp  title_dto.hpp
src/json/: account_load.json  account_lookup.json  account_match_username.json  account_select_all.json  account_select_all_for_email.json  account_update.json  bdb_databases.json  card_load.json  card_lookup.json  card_match_name.json  card_select_all.json  card_select_all_decks.json  card_select_all_for_name.json  card_select_all_for_type_id.json  card_update.json  deck_card_load.json  deck_card_lookup.json  deck_load.json  deck_lookup.json  deck_match_name.json  deck_select_all.json  deck_select_all_cards.json  deck_select_all_for_account_id.json  deck_select_all_for_name.json  deck_select_other_cards.json  deck_update.json  load_name.json  load_principals.json  load_ratings.json  load_title.json  lookup_name.json  lookup_ratings.json  lookup_title.json  request-names-full-set.txt  request-names.txt  search_name.json  search_title.json  select_name.json  select_ratings.json  select_title.json  (+2 more)
src/mtg-lib/: CMakeLists.txt  account_dao.cpp  account_dao.hpp  account_dto.cpp  account_dto.hpp  card_dao.cpp  card_dao.hpp  card_dto.cpp  card_dto.hpp  cards_dao.cpp  cards_dao.hpp  cards_dto.cpp  cards_dto.hpp  deck_card_dao.cpp  deck_card_dao.hpp  deck_card_dto.cpp  deck_card_dto.hpp  deck_cards_dao.cpp  deck_cards_dao.hpp  deck_cards_dto.cpp  deck_cards_dto.hpp  deck_dao.cpp  deck_dao.hpp  deck_dto.cpp  deck_dto.hpp  mtg_bdb_keys.cpp  mtg_bdb_keys.hpp  mtg_dto.hpp  mtg_global.cpp  mtg_global.hpp  mtg_inet_app_init.cpp  mtg_inet_app_init.hpp  mtg_inet_request.cpp  mtg_inet_request.hpp  mtg_request.cpp  mtg_request.hpp  mtg_request_handlers.cpp  mtg_request_handlers.hpp  mtg_tokens.cpp  mtg_tokens.hpp  (+12 more)
src/oatpp-lib/: CMakeLists.txt  DTOs.hpp  imdb-dto.cppx  imdb-dto.hpp  imdb_component.hpp  imdb_controller.cpp  imdb_controller.hpp
src/scripts/: bdb_inet_lookup.sh  bdb_unix_lookup.sh  check.sh  dump-db-samples.sh  dump_db_samples.sh  dump_sample.txt  dump_sample_1.txt  dump_sample_2.txt  dump_sample_init.txt  imdb_app.run.instructions.txt  imdb_app.sh  ls-db-samples.sh  mtg_app.sh  mtg_app_linux.sh  req_api.sh  request.sh  rm-db-samples.sh  run.sh
src/scripts/json/: bdb_databases.json  load_name.json  load_principals.json  load_title.json  lookup_ratings.json  lookup_title.json  search_name.json  search_ratings.json  select_name.json  select_ratings.json  (+2 more)
src/socket_test/: Dockerfile  build.sh  client.cpp  debug.sh  http_strip.cpp  request.json  request.od.txt  request.sh  request.txt  run.sh  server.cpp
src/test/: MyControllerTest.cpp  MyControllerTest.hpp  bdb_files.txt  files.txt  filtered-1-10.bat  filtered-1.bat  filtered.bat  filtered_2.bat  grep-all-edited-run-edited.txt  grep-all-edited-run.txt  grep-all-edited.sh.old  grep-all-edited.txt  grep-all.txt  grep.txt  lookup-filter-sample.bat  lookup-filter-sample.txt  lookup-filter.bat  lookup-filter.txt  lookup-sample-sample.bat  lookup-sample-sample.txt  lookup-sample.bat  lookup-sample.txt  lrt.txt  prefixes.txt  run.bat  run.txt  run1.bat  sample.bat  test_json.cpp  time-lookup.bat  time-lookup.txt  title_tripthong.txt  title_tripthongs_only.txt
src/util-lib/: CMakeLists.txt  datetime.cpp  datetime.hpp  misc_utils.cpp  misc_utils.hpp  timer.cpp  timer.hpp
src/web/: button.js  button_set.js  card_description_table.js  card_pool_table.js  card_table.js  deck_table.js  home.html  index.html  instructions.html  movie.css  movie.html  movie.js  mtg-home.html  mtg-home.js  request.js  request.json  requests.js  select_list.js  select_lists.js  table.js  table4.js  tables.js  test.html  user_select_list.js  webstats.txt
(+69 files in other folders)
