add_library(bdb-lib STATIC
        bdb_common.hpp
        bdb_cursor.hpp
        bdb_dao.hpp
        bdb_databases_config.cpp
        bdb_databases_config.hpp
        bdb_databases.cpp
        bdb_databases.hpp
        bdb_db.cpp
        bdb_db.hpp
        bdb_dbt.hpp
        bdb_errors.cpp
        bdb_errors.hpp
        bdb_file_io.cpp
        bdb_file_io.hpp
        bdb_inet_socket_server.cpp
        bdb_inet_socket_server.hpp
        bdb_json_utils.cpp
        bdb_json_utils.hpp
        bdb_key_extractor.hpp
        bdb_serializable.hpp
        bdb_serialization.cpp
        bdb_serialization.hpp
        bdb_socket_common.hpp
        bdb_tokens.cpp
        bdb_tokens.hpp
        bdb_triplets_dto.cpp
        bdb_triplets_dto.hpp
        )
target_include_directories(bdb-lib PUBLIC .)
