add_library(imdb-lib STATIC
        imdb_bdb_keys.cpp
        imdb_bdb_keys.hpp
        imdb_dto.hpp
        imdb_global.cpp
        imdb_global.hpp
        imdb_inet_app_init.cpp
        imdb_inet_app_init.hpp
        imdb_inet_request.cpp
        imdb_inet_request.hpp
        imdb_tokens.cpp
        imdb_tokens.hpp
        imdb_unix_app_init.cpp
        imdb_unix_app_init.hpp
        imdb_unix_request.cpp
        imdb_unix_request.hpp
        name_dao.cpp
        name_dao.hpp
        name_dto.cpp
        name_dto.hpp
        principals_dao.cpp
        principals_dao.hpp
        principals_dto.cpp
        principals_dto.hpp
        ratings_dao.cpp
        ratings_dao.hpp
        ratings_dto.cpp
        ratings_dto.hpp
        title_dao.cpp
        title_dao.hpp
        title_dto.cpp
        title_dto.hpp
        )
target_include_directories(imdb-lib PUBLIC .)
