add_library(mtg-lib STATIC
        account_dao.cpp
        account_dao.hpp
        account_dto.cpp
        account_dto.hpp
        card_dao.cpp
        card_dao.hpp
        card_dto.cpp
        card_dto.hpp
        deck_card_dao.cpp
        deck_card_dao.hpp
        deck_card_dto.cpp
        deck_card_dto.hpp
        deck_dao.cpp
        deck_dao.hpp
        deck_dto.cpp
        deck_dto.hpp
        mtg_bdb_keys.cpp
        mtg_bdb_keys.hpp
        mtg_dto.hpp
        mtg_global.cpp
        mtg_global.hpp
        mtg_inet_app_init.cpp
        mtg_inet_app_init.hpp
        mtg_request.cpp
        mtg_request.hpp
        mtg_request_handlers.cpp
        mtg_request_handlers.hpp
        )
target_include_directories(mtg-lib PUBLIC .)
